# personal-slack-agent

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  pypi.yml  release.yml  testpypi.yml
config/: bob.sample.toml
docs/: bob-config-setup.md  command-reference.md  development.md  how-it-works.md  publishing.md  setup.md  slack-client-findings.md
docs/superpowers/plans/: 2026-04-10-channel-scoped-memory-policy.md  2026-04-12-bob-global-concurrency.md  2026-04-24-bob-ultimate-mode.md  2026-05-02-customizable-callsigns.md
docs/superpowers/specs/: 2026-04-10-channel-scoped-memory-policy-design.md  2026-04-12-bob-global-concurrency-design.md  2026-04-24-bob-ultimate-mode-design.md  2026-05-02-customizable-callsigns-design.md
scripts/: next_release_version.py
src/personal_slack_agent/: __init__.py  callsign.py  chrome_launcher.py  codex_runner.py  config.py  generated_files.py  lock.py  logging_utils.py  models.py  orchestrator.py  paths.py  state.py
src/personal_slack_agent/cli/: __init__.py  agent.py  ctl.py  init_cmd.py  wrapper.py
src/personal_slack_agent/resources/: __init__.py  bob_chrome.applescript
src/personal_slack_agent/slack/: __init__.py  api_client.py  auth.py  browser.py  events.py  playwright_adapter.py  watcher.py  websocket_client.py
tests/: test_agent_runtime.py  test_callsign.py  test_chrome_launcher.py  test_cli_bootstrap.py  test_codex_runner.py  test_config.py  test_ctl.py  test_generated_files.py  test_init_cmd.py  test_next_release_version.py  test_orchestrator.py  test_paths.py  test_playwright_adapter.py  test_slack_api_client.py  test_slack_auth.py  test_slack_events.py  test_slack_watcher.py  test_slack_websocket_client.py  test_state.py
