[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "personal-slack-agent"
version = "0.1.0"
description = "Local Slack Web to Codex bridge for Bob."
readme = "README.md"
license = "MIT"
authors = [
    { name = "Yifan Chen", email = "ethanyc216@gmail.com" },
]
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Operating System :: MacOS :: MacOS X",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Topic :: Communications :: Chat",
]
dependencies = [
    "playwright>=1.54.0",
    "tomli>=2.0.1; python_version < '3.11'",
]

[project.urls]
Homepage = "https://github.com/ethanyc216/personal-slack-agent"
Repository = "https://github.com/ethanyc216/personal-slack-agent"
Issues = "https://github.com/ethanyc216/personal-slack-agent/issues"

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]

[project.scripts]
bob-agent = "personal_slack_agent.cli:agent_main"
bob = "personal_slack_agent.cli:wrapper_main"
bobctl = "personal_slack_agent.cli:ctl_main"
bob-init = "personal_slack_agent.cli:init_main"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.setuptools.package-data]
personal_slack_agent = ["resources/*.applescript"]
